fix: to align the fonts used

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
   font-weight: normal;
   font-size: 2.5em;
   transition: opacity 0.05s ease;
-  font-family: 'Germania One', cursive;
+  font-family: 'BLANKA';
 }
 
 .logo:hover {
@@ -166,8 +166,8 @@ a.underlined:hover {
 
 @media screen and (max-width: 768px) {
   .content .title-image {
-    width: 20%;
-    height: 20%;
+    width: 25%;
+    height: 25%;
   }
 }
 
@@ -182,7 +182,7 @@ a.underlined:hover {
 }
 @media screen and (max-width: 512px) {
 .content .title-image {
-    width: 10%;
-    height: 10%;
+    width: 20%;
+    height: 20%;
   }
 }
